# warpo

./: .clang-format  .gitignore  .npmrc  .prettierignore  CMakeLists.txt  CONTRIBUTION.md  README.md  cspell.json  package-lock.json  package.json
.github/action/auto_release/: action.yml
.github/action/build_as/: action.yml
.github/action/build_cpp/: action.yml
.github/action/build_wasm/: action.yml
.github/action/unit_test/: action.yml
.github/workflows/: build_wasm.yml  check.yml  gh-pages.yml  pr-title.yml  publish.yml  version_update.yml
assemblyscript/src/: asconfig.json  builtins.ts  compiler.ts  flow.ts  module.ts
assemblyscript/std/assembly/rt/: index.d.ts  itcms.ts
cspell/: project-words.txt
docs/: index.md
docs/.vitepress/: config.ts
docs/infra/: cost_model.md  index.md
docs/lower/: gc.md  index.md  overview.md
docs/opt/: index.md  inlining.md
model/: instruction_cost_aarch64_active_vb_warp.txt  instruction_cost_aarch64_vb_warp.txt  instruction_cost_common.txt  instruction_cost_tricore_vb_warp.txt  instruction_cost_x86_64_active_vb_warp.txt  instruction_cost_x86_64_vb_warp.txt
passes/: AdvancedInlining.cpp  AdvancedInlining.hpp  BuildCFG.cpp  BuildCFG.hpp  BuildCallGraph.cpp  BuildCallGraph.hpp  BuildGCModel.cpp  BuildGCModel.hpp  CMakeLists.txt  CleanDirectLocalUsesGC.cpp  CleanDirectLocalUsesGC.hpp  CleanLeafFunctionGC.cpp  CleanLeafFunctionGC.hpp  Cleaner.cpp  Cleaner.hpp  CollectGCLeafFunction.cpp  CollectGCLeafFunction.hpp  CostModel.cpp  CostModel.inc  ExtractMostFrequentlyUsedGlobals.cpp  ExtractMostFrequentlyUsedGlobals.hpp  InlineSetterFunction.cpp  InlineSetterFunction.hpp  Matcher.hpp  Powerset.cpp  RemoveDuplicateStoreLocalInGC.cpp  RemoveDuplicateStoreLocalInGC.hpp  Runner.cpp  Runner.hpp  ToString.cpp  ToString.hpp
passes/GC/: CollectLeafFunction.cpp  CollectLeafFunction.hpp  GCInfo.hpp  LeafFunctionFilter.cpp  LeafFunctionFilter.hpp  Liveness.cpp  Liveness.hpp  Lowering.cpp  Lowering.hpp  MergeSSA.cpp  MergeSSA.hpp  ObjLivenessAnalyzer.cpp  ObjLivenessAnalyzer.hpp  SSAObj.cpp  SSAObj.hpp  ShrinkWrap.cpp  ShrinkWrap.hpp  StackAssigner.cpp  StackAssigner.hpp
passes/helper/: BuildCFG.cpp  BuildCFG.hpp  BuildCallGraph.cpp  BuildCallGraph.hpp  CFG.cpp  CFG.hpp  CostModel.hpp  CostModel.inc  DomTree.cpp  DomTree.hpp  DomTreeImpl.cpp  DomTreeImpl.hpp  Powerset.hpp  ToString.cpp
passes/include/passes/: Runner.hpp
passes/unittests/: CMakeLists.txt  Helper.cpp  Helper.hpp
scripts/: build_wasm.mjs
support/: CMakeLists.txt  Debug.cpp  DynBitSet.cpp  Opt.cpp  Options.cpp  StringOperator.cpp
support/include/support/: Container.hpp  Debug.hpp  DynBitSet.hpp  Err.hpp  IncMap.hpp  MultipleMap.hpp  Opt.hpp  Options.hpp  Range.hpp  StringOperator.hpp
tests/: .gitignore  snapshot.mjs  tsconfig.json
tests/advanced_inlining/: config.json  large_function_use_multiple.diff.wat  large_function_use_multiple.ts  large_function_use_once.diff.wat  large_function_use_once.ts  small_function_use_multiple.diff.wat  small_function_use_multiple.ts
tests/common_lib/: normal.ts
tests/e2e/bootstrap/: test.sh
tests/e2e/performance/: perpare.sh  test.sh
tests/gc_leaf_filter/: config.json  lifetime_with_collect.diff.wat  lifetime_with_collect.ts  lifetime_with_condition_collect.diff.wat  lifetime_with_condition_collect.ts  lifetime_with_new.diff.wat  lifetime_with_new.ts  lifetime_without_new.diff.wat
tests/gc_lower/: config.json  global.diff.wat  global.ts  new_obj_with_conditional_use.diff.wat  new_obj_with_conditional_use.ts  new_obj_with_directly_use.diff.wat  new_obj_with_directly_use.ts  new_obj_with_loop_use.diff.wat  new_obj_with_loop_use.ts  new_obj_with_overwritten.diff.wat  new_obj_with_overwritten.ts  new_obj_with_return.diff.wat  new_obj_with_return.ts  new_obj_with_use.diff.wat  new_obj_with_use.ts  new_obj_without_use.diff.wat  new_obj_without_use.ts  use_from_condition.diff.wat  use_from_condition.ts
tests/gc_reuse_stack/: config.json  reuse_stack_for_difference_ssa.diff.wat  reuse_stack_for_difference_ssa.ts
tests/gc_ssa_merge/: config.json  ssa_merge_by_get_local.diff.wat  ssa_merge_by_get_local.ts  ssa_merge_by_get_param.diff.wat  ssa_merge_by_get_param.ts  ssa_merge_for_cond.diff.wat  ssa_merge_for_cond.ts  ssa_not_merge.diff.wat
tools/: CMakeLists.txt
tools/asc/: asc.ts  esbuild.js  pre_asc.ts  project_root.ts  tsconfig.json  warpo.ts
tools/optimizer/: CMakeLists.txt  EnvironmentLoader.js  Optimizer.cpp
tools/releases/: index.mjs
tools/test_runner/: CMakeLists.txt  TestRunner.cpp
